# robo_aspirador_kinect_ROS

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.linux.yaml  docker-compose.wsl2.yaml  docker-compose.yaml
scripts/: setup_turtlebot2_noetic.sh
src/robo_aspirador_kinect/: CMakeLists.txt  package.xml
src/robo_aspirador_kinect/config/: poc_kinect.rviz  rgbd_topics.yaml
src/robo_aspirador_kinect/launch/: bringup_sim.launch  poc_demo.launch  rviz_sensors.launch  teleop.launch
src/robo_aspirador_kinect/maps/: casa_v2.yaml
src/robo_aspirador_kinect/scripts/: kinect_teleop.py  verify_rgbd_topics.py
src/robo_aspirador_kinect/worlds/casa/: model.sdf
